<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/anMercado_title"
        android:textColor="@color/dark_purple"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="372dp"
        android:layout_height="75dp"
        android:layout_marginTop="120dp"
        android:background="@color/dark_purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title_card_cliques"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/anMercado_cliques_convertidos"
            android:textColor="@color/medium_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/cliques_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text=""
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/title_card_cliques"
            app:layout_constraintTop_toBottomOf="@+id/title_card_cliques"
            tools:text="99.999" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="150dp"
        android:layout_height="82dp"
        android:layout_marginTop="20dp"
        android:background="@color/light_gray"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <TextView
            android:id="@+id/title_card_taxa_navegacao"
            android:layout_width="129dp"
            android:layout_height="28dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/anMercado_tempo_medio_navegacao"
            android:textColor="@color/dark_purple"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="min"
            android:textColor="@color/dark_purple"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/title_card_taxa_navegacao"
            tools:text="15min" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/select_card_cliques"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/anMercado_filtro_tempo_cliques"
        android:textColor="@color/dark_purple"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="409dp"
        android:layout_height="44dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/title_taxa_redirecionamento"
        android:layout_width="343dp"
        android:layout_height="50dp"
        android:layout_marginTop="120dp"
        android:text="@string/anMercado_taxa_redirecionamento"
        android:textAlignment="center"
        android:textColor="@color/dark_purple"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

    <TextView
        android:id="@+id/taxa_redirecionamento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="60%"
        android:textColor="@color/dark_purple"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/title_taxa_redirecionamento"
        app:layout_constraintStart_toStartOf="@+id/title_taxa_redirecionamento"
        app:layout_constraintTop_toBottomOf="@+id/title_taxa_redirecionamento"
        tools:text="60%" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="173dp"
        android:layout_height="19dp"
        android:layout_marginTop="8dp"
        android:progress="60"
        android:progressTint="@color/dark_purple"
        app:layout_constraintEnd_toEndOf="@+id/title_taxa_redirecionamento"
        app:layout_constraintStart_toStartOf="@+id/title_taxa_redirecionamento"
        app:layout_constraintTop_toBottomOf="@+id/taxa_redirecionamento" />

</androidx.constraintlayout.widget.ConstraintLayout>